# IITS

./: README.md  fead.code-workspace
hdmap/ad_map/ad_map_server/: CMakeLists.txt  package.xml
hdmap/ad_map/ad_map_server/resource/: jinan_link_V3_D11_3_config.txt  jinan_test_fix_mean_config.txt  jinan_two_lanes_config.txt  move_lane_1119_config.txt  move_lane_1120_elevation_fix.txt  move_lane_1202_elevation_fix_config.txt
hdmap/ad_map/ad_map_server/src/: ad_to_ros_msg.cpp  ad_to_ros_msg.h  center_polyline.h  converter.cpp  converter.h  lane_boundary.h  lane_segment.h  lane_utils.cpp  lane_utils.h  map_server.cpp  map_util.cpp  map_util.h  ros_to_ad_msg.h
hdmap/ad_map/ad_map_server/src/HDMAP/: jinan.xodr
hdmap/map_test/: CMakeLists.txt  map_scan_check.py  package.xml
hdmap/map_test/src/: map_test_main.cpp
hdmap/msg_pub/: CMakeLists.txt  package.xml  readme.txt
hdmap/msg_pub/src/: test_access_lane_id.cpp  test_access_left_lane.cpp  test_access_right_lane.cpp  test_get_frenet_projection_center_polyline_2d.cpp  test_get_frenet_projection_center_polyline_3d.cpp  test_get_lane_segement_from_id.cpp  test_get_nearest_center_polyline_p2d.cpp  test_get_nearest_center_polyline_p3d.cpp  test_get_nearest_lane_segments_from_p2d.cpp  test_get_nearest_lane_segments_from_p3d.cpp  test_get_slop.cpp  test_get_z.cpp  test_routing.cpp
interface/: CMakeLists.txt  package.xml
interface/control/: Control.srv
interface/hd_map/: AccessLaneID.srv  AccessLeftLane.srv  CenterPolyline.msg  CenterPolylinePoint.msg  FrenetPoint.msg  GetFrenetProjectionCenterPolyline2d.srv  GetFrenetProjectionCenterPolyline3d.srv  GetLaneSegmentFromID.srv  GetNearestCenterPolylinePoint2d.srv  GetNearestCenterPolylinePoint3d.srv  GetNearestLaneSegmentsFromPoint2d.srv  GetNearestLaneSegmentsFromPoint3d.srv  GetSlop.srv  GetZ.srv  Lane.msg  LaneBoundary.msg  LaneEdge.msg  LaneSegment.msg  ProjectedPoint2d.msg  Routing.srv
interface/planning/: LaneChangeMsgs.msg  PlanningResult.msg  Waypoint.msg
interface/prediction/: Obstacle.msg  PerceptionResult.msg  PredictionResult.msg
interface/simulation/: SimTick.msg  SimUpdate.msg
interface/target_point/: TargetPoint.msg
interface/traffic_sim/: TrafficListMsg.msg  TrafficSim.srv
interface/vehicle_model/: VehicleModelInput.msg  VehicleModelOutput.msg  VehicleModelReset.msg
vehicle_model/cnhtc_pre_a/: CMakeLists.txt  package.xml
vehicle_model/cnhtc_pre_a/config/: settings.yaml
vehicle_model/cnhtc_pre_a/resource/: Run_cnhtc_flat_square_all.par  Run_cnhtc_pre_a_v1p1_jinan_all.par  Run_cnhtc_pre_a_v1p1_square_all.par  simfile_cnhtc_pre_a.sim  simfile_cnhtc_pre_a_jinan.sim  simfile_default.sim
vehicle_model/cnhtc_pre_a/src/: Braking.cpp  Braking.h  Braking_private.h  Braking_types.h  Engine_ECU.cpp  Engine_ECU.h  Engine_ECU_private.h  Engine_ECU_types.h  SteerWhlMdl.cpp  SteerWhlMdl.h  SteerWhlMdl_private.h  SteerWhlMdl_types.h  TCU.cpp  TCU.h  TCU_private.h  TCU_types.h  automldiffopen_m841FDlI.cpp  automldiffopen_m841FDlI.h  cnhtc_pre_a_vehicle_model.cpp  cnhtc_pre_a_vehicle_model.h  cnhtc_pre_a_vehicle_model_data.cpp  cnhtc_pre_a_vehicle_model_private.h  cnhtc_pre_a_vehicle_model_types.h  ert_api.cpp  ert_api.h  look1_binlcapw.cpp  look1_binlcapw.h  look1_binlcpw.cpp  look1_binlcpw.h  look1_binlxpw.cpp  look1_binlxpw.h  look2_binlcapw.cpp  look2_binlcapw.h  look2_binlcpw.cpp  look2_binlcpw.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  (+11 more)
vehicle_model/cnhtc_pre_a/src/vs_api/: vs_api.h  vs_deftypes.h  vs_get_api.c
vehicle_model/simulink/simulink_3d_bridge/src/: Braking.cpp  Braking.h  Braking_private.h  Braking_types.h  CMakeLists.txt  CNHTC_VEHICLE_MODEL_PureSL.cpp  CNHTC_VEHICLE_MODEL_PureSL.h  CNHTC_VEHICLE_MODEL_PureSL_TwoDofDynamic.cpp  CNHTC_VEHICLE_MODEL_PureSL_TwoDofDynamic.h  CNHTC_VEHICLE_MODEL_PureSL_data.cpp  CNHTC_VEHICLE_MODEL_PureSL_private.h  CNHTC_VEHICLE_MODEL_PureSL_types.h  Engine_ECU.cpp  Engine_ECU.h  Engine_ECU_private.h  Engine_ECU_types.h  SteerWhlMdl.cpp  SteerWhlMdl.h  SteerWhlMdl_private.h  SteerWhlMdl_types.h  TCU.cpp  TCU.h  TCU_private.h  TCU_types.h  automldiffopen_m841FDlI.cpp  automldiffopen_m841FDlI.h  look1_binlcapw.cpp  look1_binlcapw.h  look1_binlcpw.cpp  look1_binlcpw.h  look1_binlxpw.cpp  look1_binlxpw.h  look2_binlcapw.cpp  look2_binlcapw.h  look2_binlcpw.cpp  look2_binlcpw.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  (+9 more)
vehicle_model/simulink/simulink_bridge/src/: CMakeLists.txt  CNHTC_VEHICLE_MODEL_PureSL.bat  CNHTC_VEHICLE_MODEL_PureSL.cpp  CNHTC_VEHICLE_MODEL_PureSL.h  CNHTC_VEHICLE_MODEL_PureSL.mk  CNHTC_VEHICLE_MODEL_PureSL.rsp  CNHTC_VEHICLE_MODEL_PureSL_TwoDofDynamic.cpp  CNHTC_VEHICLE_MODEL_PureSL_TwoDofDynamic.h  CNHTC_VEHICLE_MODEL_PureSL_comp.rsp  CNHTC_VEHICLE_MODEL_PureSL_data.cpp  CNHTC_VEHICLE_MODEL_PureSL_private.h  CNHTC_VEHICLE_MODEL_PureSL_ref.rsp  CNHTC_VEHICLE_MODEL_PureSL_types.h  codeInfo.mat  codedescriptor.dmr  defines.txt  modelsources.txt  rtw_proj.tmw  simulink_bridge.cpp
vehicle_model/simulink/simulink_bridge/src/ert/Braking/: Braking.bat  Braking.cpp  Braking.h  Braking.mk  Braking.rsp  Braking_comp.rsp  Braking_mr_codeInfo.mat  Braking_private.h  Braking_types.h  codedescriptor.dmr  defines.txt  modelsources.txt  rtw_proj.tmw
vehicle_model/simulink/simulink_bridge/src/ert/Engine_ECU/: Engine_ECU.bat  Engine_ECU.cpp  Engine_ECU.h  Engine_ECU.mk  Engine_ECU.rsp  Engine_ECU_comp.rsp  Engine_ECU_mr_codeInfo.mat  Engine_ECU_private.h  Engine_ECU_types.h  codedescriptor.dmr  defines.txt  modelsources.txt  rtw_proj.tmw
vehicle_model/simulink/simulink_bridge/src/ert/SteerWhlMdl/: SteerWhlMdl.bat  SteerWhlMdl.cpp  SteerWhlMdl.h  SteerWhlMdl.mk  SteerWhlMdl.rsp  SteerWhlMdl_comp.rsp  SteerWhlMdl_mr_codeInfo.mat  SteerWhlMdl_private.h  SteerWhlMdl_types.h  codedescriptor.dmr  defines.txt  modelsources.txt  rtw_proj.tmw
visualization/carla/carla_msgs/: CMakeLists.txt  package.xml
visualization/carla/carla_msgs/msg/: CarlaCollisionEvent.msg  CarlaEgoVehicleControl.msg  CarlaEgoVehicleStatus.msg  CarlaLaneInvasionEvent.msg  CarlaRadarMeasurement.msg
(+5149 files in other folders)
