<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ad_map_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wei.li@inceptioglobal.ai">liwei</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>fead_interfaces</build_depend>
  <build_depend>ad_map_access</build_depend>
  <build_depend>ad_map_opendrive_reader</build_depend>
  <build_depend>ad_physics</build_depend>
  <build_depend>spdlog</build_depend>
  <build_depend>allspark</build_depend>

  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>fead_interfaces</exec_depend>
  <exec_depend>ad_map_access</exec_depend>
  <exec_depend>ad_map_opendrive_reader</exec_depend>
  <exec_depend>ad_physics</exec_depend>
  <exec_depend>spdlog</exec_depend>
  <exec_depend>allspark</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
